# esp32_manager_server

./: Cargo.toml  TEST_README.md  admin_cookies.txt  connect_device.html  connect_esp32.html  cookies_final.txt  cookies_new.txt  debug_websocket.bat  demo_cookies.txt  package-lock.json  package.json  run_tests.bat  test-user-color.html  tsconfig.json
.claude/: CLAUDE.md  settings.local.json
client/: app.js  index.css  index.html
client/scripts/: canvas-websocket-bridge.js  color-state.js  device_control.js  drawer-state.js  drawer_page.js  drawing_board.js  esp32_control.js  event-system.js  index.js  menu-api.js  websocket-client.js
client/scripts/drawer/: abstract-shapes.js  abstract-shapes.js.map  canvas.js  canvas.js.map  constants.js  constants.js.map  event-bus.js  event-bus.js.map  event-store.js  event-store.js.map  event-wrapper.js  (+13 more)
client/styles/: admin.css  device_control.css  drawer_page.css  drawing_board.css  esp32_control.css  index.css  menu-api.css
client/templates/: about.html  admin.html  canvas_detail.html  debug.html  device_control.html  docs.html  drawer_page.html  drawing_board.html  esp32_control.html  hallo.html  index.html  login.html  register.html  settings.html
esp32-code/: diagram.json  ota.cpp  platformio.ini  wokwi.toml
esp32-code/.claude/: settings.local.json
esp32-code/remote_access/: remote_access.cpp
old-wpf/backend/: DatabaseManager.cs  MdnsHandler.cs  NetworkHelper.cs  PioProjectHandler.cs  RemoteAccess.cs  UdpSearcher.cs
old-wpf/frontend/: RemoteAccessWindow.xaml  RemoteAccessWindow.xaml.cs
scripts/: build.js
src/backend/: app_state.rs  auth.rs  canvas_store.rs  database.rs  debug_logger.rs  device_connection.rs  device_discovery.rs  device_manager.rs  device_store.rs  device_types.rs  esp32_connection.rs  esp32_discovery.rs  esp32_manager.rs  esp32_types.rs  events.rs  file_utils.rs  lib.rs  main.rs  mdns_discovery.rs  mdns_server.rs  uart_connection.rs  udp_searcher.rs  websocket.rs
src/drawer/: abstract-shapes.ts  canvas.ts  constants.ts  event-bus.ts  event-store.ts  event-wrapper.ts  events.ts  index.ts  models.ts  shape-factory.ts  tools.ts  utils.ts
tests/: auth_integration.rs  auth_unit.rs  backend_integration_tests.rs  backend_unit_tests.rs  device_native_test.js  esp32_connection_test.rs  esp32_native_test.js  integration_test.js  json_generator.py
tests/backend/: mod.rs
tests/common/: mod.rs
tests/frontend/: package.json  test-setup.js
tests/scripts/: run-all-tests.bat  run-backend-tests.bat  run-frontend-tests.bat
(+20 files in other folders)
